RESOLVED FIXED305471
[LBSE] Fix path-seg-nan-coordinates-linecap-crash.html crash
https://bugs.webkit.org/show_bug.cgi?id=305471
Summary [LBSE] Fix path-seg-nan-coordinates-linecap-crash.html crash
Rob Buis
Reported 2026-01-14 06:18:43 PST
Fix path-seg-nan-coordinates-linecap-crash.html crash.
Attachments
Rob Buis
Comment 1 2026-01-14 06:25:48 PST
EWS
Comment 2 2026-01-14 08:24:16 PST
Committed 305577@main (19059dff60c1): <https://commits.webkit.org/305577@main> Reviewed commits have been landed. Closing PR #56559 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-14 08:25:14 PST
Note You need to log in before you can comment on or make changes to this bug.