[LBSE] Fix path-seg-nan-coordinates-linecap-crash.html crash https://bugs.webkit.org/show_bug.cgi?id=305471

Reviewed by Nikolas Zimmermann.

In 299291@main path-seg-nan-coordinates-linecap-crash.html was added to test
inserting a PathSeg with NaN coordinates, but the fix was only implemented for
Legacy SVG. This PR adds the same fix for LBSE.

* Source/WebCore/rendering/svg/RenderSVGPath.cpp:
(WebCore::RenderSVGPath::adjustStrokeBoundingBoxForZeroLengthLinecaps const):

Canonical link: https://commits.webkit.org/305577@main